// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip-list> Component basic usage with links 1`] = `
<bolt-chip-list id="c-bolt-chip-list-12345">
  <div class="c-bolt-chip-list">
    <ssr-keep for="bolt-chip-list"
              class="js-bolt-chip-list__container"
    >
      <bolt-list tag="ul"
                 display="inline"
                 spacing="xsmall"
                 separator="none"
                 align="start"
                 valign="center"
      >
        <ssr-keep for="bolt-list"
                  role="list"
                  class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
        >
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 1
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 2
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 3
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item last
                          role="presentation"
          >
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 4
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
        </ssr-keep>
      </bolt-list>
    </ssr-keep>
  </div>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component basic usage with mixed behavior 1`] = `
<bolt-chip-list id="c-bolt-chip-list-12345">
  <div class="c-bolt-chip-list">
    <ssr-keep for="bolt-chip-list"
              class="js-bolt-chip-list__container"
    >
      <bolt-list tag="ul"
                 display="inline"
                 spacing="xsmall"
                 separator="none"
                 align="start"
                 valign="center"
      >
        <ssr-keep for="bolt-list"
                  role="list"
                  class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
        >
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 1
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip>
                <span class="c-bolt-chip c-bolt-chip--size-small">
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip text 1
                  </ssr-keep>
                </span>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 3
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item last
                          role="presentation"
          >
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
            >
              <bolt-chip>
                <span class="c-bolt-chip c-bolt-chip--size-small">
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip text 2
                  </ssr-keep>
                </span>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
        </ssr-keep>
      </bolt-list>
    </ssr-keep>
  </div>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component basic usage without links 1`] = `
<bolt-chip-list id="c-bolt-chip-list-12345">
  <div class="c-bolt-chip-list">
    <ssr-keep for="bolt-chip-list"
              class="js-bolt-chip-list__container"
    >
      <bolt-list tag="ul"
                 display="inline"
                 spacing="xsmall"
                 separator="none"
                 align="start"
                 valign="center"
      >
        <ssr-keep for="bolt-list"
                  role="list"
                  class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
        >
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip>
                <span class="c-bolt-chip c-bolt-chip--size-small">
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip text 1
                  </ssr-keep>
                </span>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip>
                <span class="c-bolt-chip c-bolt-chip--size-small">
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip text 2
                  </ssr-keep>
                </span>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip>
                <span class="c-bolt-chip c-bolt-chip--size-small">
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip text 3
                  </ssr-keep>
                </span>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item last
                          role="presentation"
          >
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
            >
              <bolt-chip>
                <span class="c-bolt-chip c-bolt-chip--size-small">
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip text 4
                  </ssr-keep>
                </span>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
        </ssr-keep>
      </bolt-list>
    </ssr-keep>
  </div>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component collapsible 1`] = `
<bolt-chip-list
  collapsible=""
  id="c-bolt-chip-list-12345"
  style=""
  truncate="3"
>
  
  

      




    

  <bolt-list
    align="start"
    display="inline"
    separator="none"
    spacing="xsmall"
    style=""
    tag="ul"
    valign="center"
  >
    
      
    
  

                  


    <bolt-list-item
      role="presentation"
      style=""
    >
      
  

                






        




      <bolt-chip
        style=""
        url="#!"
      >
        
      Chip link 1
    
      </bolt-chip>
          
      
    </bolt-list-item>
    
                        


    <bolt-list-item
      role="presentation"
      style=""
    >
      
  

                






        




      <bolt-chip
        style=""
        url="#!"
      >
        
      Chip link 2
    
      </bolt-chip>
          
      
    </bolt-list-item>
    
                        


    <bolt-list-item
      role="presentation"
      style=""
    >
      
  

                






        




      <bolt-chip
        style=""
        url="#!"
      >
        
      Chip link 3
    
      </bolt-chip>
          
      
    </bolt-list-item>
    
                        


    <bolt-list-item
      aria-hidden="true"
      hidden=""
      role="presentation"
      style=""
    >
      
  

                






        




      <bolt-chip
        style=""
        url="#!"
      >
        
      Chip link 4
    
      </bolt-chip>
          
      
    </bolt-list-item>
    
                        


    <bolt-list-item
      aria-hidden="true"
      hidden=""
      role="presentation"
      style=""
    >
      
  

                






        




      <bolt-chip
        style=""
        url="#!"
      >
        
      Chip link 5
    
      </bolt-chip>
          
      
    </bolt-list-item>
    
                        


                        


            
    <bolt-list-item
      last=""
      style=""
      truncate-trigger=""
    >
      <!---->
      
          
                
      <bolt-trigger
        aria-label="Show more"
        style=""
      >
        
                  
        <bolt-chip
          icon-only=""
          style=""
        >
          
                    
          <svg
            class="e-bolt-icon"
            slot="after"
            style=""
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-rule="evenodd"
              fill="#151619"
              fill-rule="evenodd"
              style=""
            >
              <path
                d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16"
                style=""
              />
            </g>
          </svg>
          
                  
        </bolt-chip>
        
                
      </bolt-trigger>
      
              
        
      <!---->
    </bolt-list-item>
  </bolt-list>
  
    
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component collapsible 2`] = `
<bolt-chip-list truncate="3"
                collapsible
                id="c-bolt-chip-list-12345"
>
  <div class="c-bolt-chip-list">
    <style class="c-bolt-chip-list--no-js">
      #c-bolt-chip-list-12345 #c-bolt-chip-list__input-12345:not(:checked) ~ .js-bolt-chip-list__container bolt-list-item:nth-child(n+3) ~  bolt-list-item:not([truncate-trigger-expand]),
        #c-bolt-chip-list-12345 #c-bolt-chip-list__input-12345:checked ~ .js-bolt-chip-list__container [truncate-trigger-expand] {
          display: none;
        }
    </style>
    <input type="checkbox"
           id="c-bolt-chip-list__input-12345"
           class="c-bolt-chip-list__input c-bolt-chip-list--no-js"
    >
    <ssr-keep for="bolt-chip-list"
              class="js-bolt-chip-list__container"
    >
      <bolt-list tag="ul"
                 display="inline"
                 spacing="xsmall"
                 separator="none"
                 align="start"
                 valign="center"
      >
        <ssr-keep for="bolt-list"
                  role="list"
                  class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
        >
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 1
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 2
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 3
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 4
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 5
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation"
                          truncate-trigger
                          truncate-trigger-expand
          >
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <label class="c-bolt-chip-list__label"
                     for="c-bolt-chip-list__input-12345"
              >
                <bolt-chip icon-only>
                  <span class="c-bolt-chip c-bolt-chip--size-small c-bolt-chip--icon-only">
                    <ssr-keep for="bolt-chip"
                              class="c-bolt-chip__text"
                    >
                      Show more
                    </ssr-keep>
                    <ssr-keep for="bolt-chip"
                              class="c-bolt-chip__icon"
                    >
                      <svg slot="after"
                           class="e-bolt-icon"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 32 32"
                           aria-hidden="true"
                      >
                        <g fill="#151619"
                           fill-rule="evenodd"
                           clip-rule="evenodd"
                        >
                          <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
                          </path>
                        </g>
                      </svg>
                    </ssr-keep>
                  </span>
                </bolt-chip>
              </label>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item last
                          role="presentation"
                          truncate-trigger
                          truncate-trigger-collapse
          >
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
            >
              <label class="c-bolt-chip-list__label"
                     for="c-bolt-chip-list__input-12345"
              >
                <bolt-chip icon-only>
                  <span class="c-bolt-chip c-bolt-chip--size-small c-bolt-chip--icon-only">
                    <ssr-keep for="bolt-chip"
                              class="c-bolt-chip__text"
                    >
                      Show less
                    </ssr-keep>
                    <ssr-keep for="bolt-chip"
                              class="c-bolt-chip__icon"
                    >
                      <svg slot="after"
                           class="e-bolt-icon"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 32 32"
                           aria-hidden="true"
                      >
                        <path fill="#151619"
                              fill-rule="evenodd"
                              d="M19.6 26.6c.6.6 1.6.6 2.2 0s.6-1.6 0-2.2L13.5 16l8.3-8.3c.6-.6.6-1.6 0-2.2-.3-.3-.7-.5-1.1-.5s-.8.2-1.1.5l-9.5 9.4c-.6.6-.6 1.6 0 2.2z"
                              clip-rule="evenodd"
                        >
                        </path>
                      </svg>
                    </ssr-keep>
                  </span>
                </bolt-chip>
              </label>
            </ssr-keep>
          </bolt-list-item>
        </ssr-keep>
      </bolt-list>
    </ssr-keep>
  </div>
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component truncate 1`] = `
<bolt-chip-list
  id="c-bolt-chip-list-12345"
  style=""
  truncate="3"
>
  
  

      




    

  <bolt-list
    align="start"
    display="inline"
    separator="none"
    spacing="xsmall"
    style=""
    tag="ul"
    valign="center"
  >
    
      
    
  
    <ssr-keep
      class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
      for="bolt-list"
      role="list"
      style=""
    >
      
                  


      <bolt-list-item
        role="presentation"
        style=""
      >
        
  
        <ssr-keep
          class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          for="bolt-list-item"
          role="listitem"
          style=""
        >
          
                






        




          <bolt-chip
            style=""
            url="#!"
          >
            <a
              class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
              href="#!"
              style=""
            >
              <ssr-keep
                class="c-bolt-chip__text"
                for="bolt-chip"
                style=""
              >
                
      Chip link 1
    
              </ssr-keep>
            </a>
          </bolt-chip>
              
      
        </ssr-keep>
        

      </bolt-list-item>
      
                        


      <bolt-list-item
        role="presentation"
        style=""
      >
        
  
        <ssr-keep
          class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          for="bolt-list-item"
          role="listitem"
          style=""
        >
          
                






        




          <bolt-chip
            style=""
            url="#!"
          >
            <a
              class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
              href="#!"
              style=""
            >
              <ssr-keep
                class="c-bolt-chip__text"
                for="bolt-chip"
                style=""
              >
                
      Chip link 2
    
              </ssr-keep>
            </a>
          </bolt-chip>
              
      
        </ssr-keep>
        

      </bolt-list-item>
      
                        


      <bolt-list-item
        role="presentation"
        style=""
      >
        
  
        <ssr-keep
          class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          for="bolt-list-item"
          role="listitem"
          style=""
        >
          
                






        




          <bolt-chip
            style=""
            url="#!"
          >
            <a
              class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
              href="#!"
              style=""
            >
              <ssr-keep
                class="c-bolt-chip__text"
                for="bolt-chip"
                style=""
              >
                
      Chip link 3
    
              </ssr-keep>
            </a>
          </bolt-chip>
              
      
        </ssr-keep>
        

      </bolt-list-item>
      
                        


      <bolt-list-item
        aria-hidden="true"
        hidden=""
        role="presentation"
        style=""
      >
        
  
        <ssr-keep
          class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          for="bolt-list-item"
          role="listitem"
          style=""
        >
          
                






        




          <bolt-chip
            style=""
            url="#!"
          >
            <a
              class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
              href="#!"
              style=""
            >
              <ssr-keep
                class="c-bolt-chip__text"
                for="bolt-chip"
                style=""
              >
                
      Chip link 4
    
              </ssr-keep>
            </a>
          </bolt-chip>
              
      
        </ssr-keep>
        

      </bolt-list-item>
      
                        


      <bolt-list-item
        aria-hidden="true"
        hidden=""
        role="presentation"
        style=""
      >
        
  
        <ssr-keep
          class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          for="bolt-list-item"
          role="listitem"
          style=""
        >
          
                






        




          <bolt-chip
            style=""
            url="#!"
          >
            <a
              class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
              href="#!"
              style=""
            >
              <ssr-keep
                class="c-bolt-chip__text"
                for="bolt-chip"
                style=""
              >
                
      Chip link 5
    
              </ssr-keep>
            </a>
          </bolt-chip>
              
      
        </ssr-keep>
        

      </bolt-list-item>
      
                        


            
      <bolt-list-item
        style=""
        truncate-trigger=""
      >
        <!---->
        
          
                
        <bolt-trigger
          aria-label="Show more"
          style=""
        >
          
                  
          <bolt-chip
            icon-only=""
            style=""
          >
            
                    
            <svg
              class="e-bolt-icon"
              slot="after"
              style=""
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-rule="evenodd"
                fill="#151619"
                fill-rule="evenodd"
                style=""
              >
                <path
                  d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16"
                  style=""
                />
              </g>
            </svg>
            
                  
          </bolt-chip>
          
                
        </bolt-trigger>
        
              
        
        <!---->
      </bolt-list-item>
    </ssr-keep>
    

  </bolt-list>
  
    
</bolt-chip-list>
`;

exports[`<bolt-chip-list> Component truncate 2`] = `
<bolt-chip-list truncate="3"
                id="c-bolt-chip-list-12345"
>
  <div class="c-bolt-chip-list">
    <style class="c-bolt-chip-list--no-js">
      #c-bolt-chip-list-12345 #c-bolt-chip-list__input-12345:not(:checked) ~ .js-bolt-chip-list__container bolt-list-item:nth-child(n+3) ~  bolt-list-item:not([truncate-trigger-expand]),
        #c-bolt-chip-list-12345 #c-bolt-chip-list__input-12345:checked ~ .js-bolt-chip-list__container [truncate-trigger-expand] {
          display: none;
        }
    </style>
    <input type="checkbox"
           id="c-bolt-chip-list__input-12345"
           class="c-bolt-chip-list__input c-bolt-chip-list--no-js"
    >
    <ssr-keep for="bolt-chip-list"
              class="js-bolt-chip-list__container"
    >
      <bolt-list tag="ul"
                 display="inline"
                 spacing="xsmall"
                 separator="none"
                 align="start"
                 valign="center"
      >
        <ssr-keep for="bolt-list"
                  role="list"
                  class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
        >
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 1
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 2
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 3
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 4
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item role="presentation">
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
            >
              <bolt-chip url="#!">
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                >
                  <ssr-keep for="bolt-chip"
                            class="c-bolt-chip__text"
                  >
                    Chip link 5
                  </ssr-keep>
                </a>
              </bolt-chip>
            </ssr-keep>
          </bolt-list-item>
          <bolt-list-item last
                          role="presentation"
                          truncate-trigger
                          truncate-trigger-expand
          >
            <ssr-keep for="bolt-list-item"
                      role="listitem"
                      class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
            >
              <label class="c-bolt-chip-list__label"
                     for="c-bolt-chip-list__input-12345"
              >
                <bolt-chip icon-only>
                  <span class="c-bolt-chip c-bolt-chip--size-small c-bolt-chip--icon-only">
                    <ssr-keep for="bolt-chip"
                              class="c-bolt-chip__text"
                    >
                      Show more
                    </ssr-keep>
                    <ssr-keep for="bolt-chip"
                              class="c-bolt-chip__icon"
                    >
                      <svg slot="after"
                           class="e-bolt-icon"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 32 32"
                           aria-hidden="true"
                      >
                        <g fill="#151619"
                           fill-rule="evenodd"
                           clip-rule="evenodd"
                        >
                          <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
                          </path>
                        </g>
                      </svg>
                    </ssr-keep>
                  </span>
                </bolt-chip>
              </label>
            </ssr-keep>
          </bolt-list-item>
        </ssr-keep>
      </bolt-list>
    </ssr-keep>
  </div>
</bolt-chip-list>
`;
